fix footer placement

--- a/index.html
+++ b/index.html
@@ -213,10 +213,8 @@
             <div class="right-line"></div>
         </div>
     </div>
-    <div class="es-footer">
-        <mailto></mailto>
-        <p class="text-center">4000 Saint-Ambroise, Suite 388, Montréal (Qc), 4C 2C7 | (514) 787.0693 | <a href="info@exosource.com">info@exosource.com</a></p>
+    <div class="es-footer navbar-fixed-bottom">
+        <p class="text-center">4000 Saint-Ambroise, Suite 388, Montréal (Qc), 4C 2C7 | (514) 787.0693 | <a href="mailto:info@exosource.com">info@exosource.com</a></p>
     </div>
-
 </body>
 </html>
