refactor js and add font

--- a/index.html
+++ b/index.html
@@ -71,7 +71,162 @@
             </div>
         </div>
     </div>
-    <div id="main-section" class="main-section"></div>
+
+    <!---------------------------page00--------------------------->
+
+    <div id="page00" class="main-section">
+        <div class="text-section">
+            <h1 class="text-colored">Slogan court et punché</h1>
+        </div>
+        <div class="text-section">
+            <h1 class="text-white">d’introduction</h1>
+        </div>
+        <div class="text-section">
+            <p>Grâce à ce court questionnaire (5 à 10 minutes de votre temps, promis), vous obtiendrez un rapport détaillé des améliorations
+                possibles pour votre entreprise.</p>
+        </div>
+        <div class="text-section">
+            <div class="button-start-wrapper">
+                <div class="button-start-color-bg">
+                    <div class="button-start">
+                        <h3>COMMENCER</h3>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!---------------------------page01--------------------------->
+
+    <div id="page01" class="main-section display-none">
+        <div class="text-section">
+            <h2 class="text-colored">Section 1: La sécurité</h2>
+        </div>
+        <div class="text-section">
+            <p>Capacité de l’entreprise à se protéger contre différentes menaces (virus, fraude, piratage) et à contrôler l’accès aux
+                informations privilégiées.</p>
+        </div>
+        <div class="horizontal-line"></div>
+        <div class="text-section">
+            <p class="text-secondary text-colored">Indiquez le degré d’importance de cet énoncé pour votre entreprise:</p>
+        </div>
+        <div class="text-section">
+            <p class="text-question text-white"><span class="text-colored">Question 1.1</span> L'entreprise ou ses clients sont soumis à des règlementations particulières
+                (Ex: Services Financiers, Industrie Pharmaceutique, Secteur public)</p>
+        </div>
+        <div class="text-section vote-section">
+            <div class="col-sm-15 vote-item">
+                <svg>
+                    <use xlink:href="#rate" width="120"></use>
+                </svg>
+                <span>1</span>
+            </div>
+            <div class="col-sm-15 vote-item">
+                <svg>
+                    <use xlink:href="#rate" width="120"></use>
+                </svg>
+                <span>2</span>
+            </div>
+            <div class="col-sm-15 vote-item">
+                <svg>
+                    <use xlink:href="#rate" width="120"></use>
+                </svg>
+                <span>3</span>
+            </div>
+            <div class="col-sm-15 vote-item">
+                <svg>
+                    <use xlink:href="#rate" width="120"></use>
+                </svg>
+                <span>4</span>
+            </div>
+            <div class="col-sm-15 vote-item">
+                <svg>
+                    <use xlink:href="#rate" width="120"></use>
+                </svg>
+                <span>5</span>
+            </div>
+        </div>
+    </div>
+
+    <!---------------------------page02--------------------------->
+
+    <div id="page02" class="main-section  display-none">
+        <div class="text-section">
+            <h2 class="text-gray">La sécurité</h2>
+        </div>
+        <div class="horizontal-line"></div>
+        <div class="text-section">
+            <p class="text-secondary text-colored">Indiquez le degré d’importance de cet énoncé pour votre entreprise:</p>
+        </div>
+        <div class="text-section">
+            <p class="text-question text-white"><span class="text-colored">Question 1.2</span> Une fuite de données confidentielles aurait des conséquences graves pour l'entreprise 
+            (Ex: Informations financières, numéros de cartes de crédit)</p>
+        </div>
+        <div class="text-section vote-section">
+            <div class="col-sm-15 vote-item">
+                <svg>
+                    <use xlink:href="#rate" width="120"></use>
+                </svg>
+                <span>1</span>
+            </div>
+            <div class="col-sm-15 vote-item">
+                <svg>
+                    <use xlink:href="#rate" width="120"></use>
+                </svg>
+                <span>2</span>
+            </div>
+            <div class="col-sm-15 vote-item">
+                <svg>
+                    <use xlink:href="#rate" width="120"></use>
+                </svg>
+                <span>3</span>
+            </div>
+            <div class="col-sm-15 vote-item">
+                <svg>
+                    <use xlink:href="#rate" width="120"></use>
+                </svg>
+                <span>4</span>
+            </div>
+            <div class="col-sm-15 vote-item">
+                <svg>
+                    <use xlink:href="#rate" width="120"></use>
+                </svg>
+                <span>5</span>
+            </div>
+        </div>
+    </div>
+
+    <!---------------------------page03--------------------------->
+
+    <div id="page03" class="main-section  display-none">
+        <div class="text-section">
+            <h2 class="text-gray">La sécurité</h2>
+        </div>
+        <div class="horizontal-line"></div>
+        <div class="text-section">
+            <p class="text-secondary text-colored">Indiquez le degré d’importance de cet énoncé pour votre entreprise:</p>
+        </div>
+        <div class="text-section">
+            <p class="text-question text-white">
+                <span class="text-colored">Question 1.5</span> Les mises à jour de sécurité sont systématiquement appliquées sur tous nos serveurs au minimum une fois par mois
+            </p>
+        </div>
+        <div class="text-section">
+            <div class="col-xs-4">
+                <button class="button-choose">VRAI</button>
+            </div>
+            <div class="col-xs-4">
+                <button class="button-choose">FAUX</button>
+            </div>
+            <div class="col-xs-4">
+                <button class="button-choose">NE SAIT PAS</button>
+            </div>
+        </div>
+    </div>
+
+    <!---------------------------page04--------------------------->
+
+
     <div class="progress-meter">
         <div class="progress-meter-top-section">
             <div class="top-line">
@@ -165,5 +320,6 @@
     <div class="es-footer navbar-fixed-bottom">
         <p class="text-center">4000 Saint-Ambroise, Suite 388, Montréal (Qc), 4C 2C7 | (514) 787.0693 | <a href="mailto:info@exosource.com">info@exosource.com</a></p>
     </div>
+
 </body>
 </html>
