add report page

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <img src="assets/images/logo-exosource.png" alt="logo">
     </div>
     <div class="progress-bar-container" id="js-progress-bar-container">
-        <div class="progress-question"><p>Question 6/9</p></div>
+        <div class="progress-question"><p>Question 1/5</p></div>
         <div class="progress-nav">
             <div class="progress-nav-previous">
                 <img src="assets/images/back.svg" width="22" alt="previous"><p>Précédent</p>
@@ -198,7 +198,7 @@
 
     <!---------------------------page03--------------------------->
 
-    <div id="page03" class="main-section  display-none">
+    <div id="page03" class="main-section display-none">
         <div class="text-section">
             <h2 class="text-gray">La sécurité</h2>
         </div>
@@ -225,6 +225,76 @@
     </div>
 
     <!---------------------------page04--------------------------->
+
+    <div id="page04" class="main-section display-none">
+        <div class="text-section">
+            <h2 class="text-gray">Mobilité</h2>
+        </div>
+        <div class="horizontal-line"></div>
+        <div class="text-section">
+            <p class="text-secondary text-colored">Répondez par vrai, faux ou ne sait pas à l’énoncé suivant:</p>
+        </div>
+        <div class="text-section">
+            <p class="text-question text-white">
+                <span class="text-colored">Question 3.6</span> Nos employés peuvent accéder à distance à toutes les applications nécessaires pour effectuer leur travail
+            </p>
+        </div>
+        <div class="text-section">
+            <div class="col-xs-4">
+                <button class="button-choose">VRAI</button>
+            </div>
+            <div class="col-xs-4">
+                <button class="button-choose">FAUX</button>
+            </div>
+            <div class="col-xs-4">
+                <button class="button-choose">NE SAIT PAS</button>
+            </div>
+        </div>
+    </div>
+
+    <!---------------------------page05--------------------------->
+
+    <div id="page05" class="main-section display-none">
+        <div class="text-section">
+            <h2 class="text-gray">Gestion et administration</h2>
+        </div>
+        <div class="horizontal-line"></div>
+        <div class="text-section">
+            <p class="text-secondary text-colored">Répondez par vrai, faux ou ne sait pas à l’énoncé suivant:</p>
+        </div>
+        <div class="text-section">
+            <p class="text-question text-white">
+                <span class="text-colored">Question 6.10</span> L’entreprise possède une procédure documentée pour l’achat et la configuration d’un nouveau poste informatique
+            </p>
+        </div>
+        <div class="text-section">
+            <div class="col-xs-4">
+                <button class="button-choose">VRAI</button>
+            </div>
+            <div class="col-xs-4">
+                <button class="button-choose">FAUX</button>
+            </div>
+            <div class="col-xs-4">
+                <button class="button-choose">NE SAIT PAS</button>
+            </div>
+        </div>
+    </div>
+
+    <!---------------------------page06--------------------------->
+
+    <div id="page06" class="main-section display-none">
+        <div id="loading-center">
+            <div id="loading-center-absolute">
+                <div class="object" id="object_one"></div>
+                <div class="object" id="object_two"></div>
+                <div class="object" id="object_three"></div>
+                <div class="object" id="object_four"></div>
+            </div>
+        </div>
+        <div id="report-container">
+            <img src="assets/images/report.png" alt="report">
+        </div>
+    </div>
 
 
     <div class="progress-meter">
