add report button

--- a/index.html
+++ b/index.html
@@ -294,6 +294,14 @@
         <div id="report-container">
             <img src="assets/images/report.png" alt="report">
         </div>
+        <div class="button-start-wrapper button-report-wrapper">
+            <div class="button-start-color-bg button-report-color-bg">
+                <div class="button-report text-center">
+                    <h3>RAPPORT COMPLET &nbsp;&nbsp;</h3>
+                    <span><img src="assets/images/printer.svg" alt="print" width="20"></span>
+                </div>
+            </div>
+        </div>
     </div>
 
 
