adjust main section position

--- a/index.html
+++ b/index.html
@@ -72,238 +72,240 @@
         </div>
     </div>
 
-    <!---------------------------page00--------------------------->
+    <!--<div class="main-section-wrapper">-->
 
-    <div id="page00" class="main-section">
-        <div class="text-section">
-            <h1 class="text-colored">Slogan court et punché</h1>
-        </div>
-        <div class="text-section">
-            <h1 class="text-white">d’introduction</h1>
-        </div>
-        <div class="text-section">
-            <p>Grâce à ce court questionnaire (5 à 10 minutes de votre temps, promis), vous obtiendrez un rapport détaillé des améliorations
-                possibles pour votre entreprise.</p>
-        </div>
-        <div class="text-section">
-            <div class="button-start-wrapper">
-                <div class="button-start-color-bg">
-                    <div class="button-start">
-                        <h3>COMMENCER</h3>
+        <!---------------------------page00--------------------------->
+
+        <div id="page00" class="main-section">
+            <div class="text-section">
+                <h1 class="text-colored">Slogan court et punché</h1>
+            </div>
+            <div class="text-section">
+                <h1 class="text-white">d’introduction</h1>
+            </div>
+            <div class="text-section">
+                <p>Grâce à ce court questionnaire (5 à 10 minutes de votre temps, promis), vous obtiendrez un rapport détaillé des améliorations
+                    possibles pour votre entreprise.</p>
+            </div>
+            <div class="text-section">
+                <div class="button-start-wrapper">
+                    <div class="button-start-color-bg">
+                        <div class="button-start">
+                            <h3>COMMENCER</h3>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
 
-    <!---------------------------page01--------------------------->
+        <!---------------------------page01--------------------------->
 
-    <div id="page01" class="main-section display-none">
-        <div class="text-section">
-            <h2 class="text-colored">Section 1: La sécurité</h2>
-        </div>
-        <div class="text-section">
-            <p>Capacité de l’entreprise à se protéger contre différentes menaces (virus, fraude, piratage) et à contrôler l’accès aux
-                informations privilégiées.</p>
-        </div>
-        <div class="horizontal-line"></div>
-        <div class="text-section">
-            <p class="text-secondary text-colored">Indiquez le degré d’importance de cet énoncé pour votre entreprise:</p>
-        </div>
-        <div class="text-section">
-            <p class="text-question text-white"><span class="text-colored">Question 1.1</span> L'entreprise ou ses clients sont soumis à des règlementations particulières
-                (Ex: Services Financiers, Industrie Pharmaceutique, Secteur public)</p>
-        </div>
-        <div class="text-section vote-section">
-            <div class="col-sm-15 vote-item">
-                <svg>
-                    <use xlink:href="#rate" width="120"></use>
-                </svg>
-                <span>1</span>
+        <div id="page01" class="main-section display-none">
+            <div class="text-section">
+                <h2 class="text-colored">Section 1: La sécurité</h2>
             </div>
-            <div class="col-sm-15 vote-item">
-                <svg>
-                    <use xlink:href="#rate" width="120"></use>
-                </svg>
-                <span>2</span>
+            <div class="text-section">
+                <p>Capacité de l’entreprise à se protéger contre différentes menaces (virus, fraude, piratage) et à contrôler l’accès aux
+                    informations privilégiées.</p>
             </div>
-            <div class="col-sm-15 vote-item">
-                <svg>
-                    <use xlink:href="#rate" width="120"></use>
-                </svg>
-                <span>3</span>
+            <div class="horizontal-line"></div>
+            <div class="text-section">
+                <p class="text-secondary text-colored">Indiquez le degré d’importance de cet énoncé pour votre entreprise:</p>
             </div>
-            <div class="col-sm-15 vote-item">
-                <svg>
-                    <use xlink:href="#rate" width="120"></use>
-                </svg>
-                <span>4</span>
+            <div class="text-section">
+                <p class="text-question text-white"><span class="text-colored">Question 1.1</span> L'entreprise ou ses clients sont soumis à des règlementations particulières
+                    (Ex: Services Financiers, Industrie Pharmaceutique, Secteur public)</p>
             </div>
-            <div class="col-sm-15 vote-item">
-                <svg>
-                    <use xlink:href="#rate" width="120"></use>
-                </svg>
-                <span>5</span>
-            </div>
-        </div>
-    </div>
-
-    <!---------------------------page02--------------------------->
-
-    <div id="page02" class="main-section  display-none">
-        <div class="text-section">
-            <h2 class="text-gray">La sécurité</h2>
-        </div>
-        <div class="horizontal-line"></div>
-        <div class="text-section">
-            <p class="text-secondary text-colored">Indiquez le degré d’importance de cet énoncé pour votre entreprise:</p>
-        </div>
-        <div class="text-section">
-            <p class="text-question text-white"><span class="text-colored">Question 1.2</span> Une fuite de données confidentielles aurait des conséquences graves pour l'entreprise 
-            (Ex: Informations financières, numéros de cartes de crédit)</p>
-        </div>
-        <div class="text-section vote-section">
-            <div class="col-sm-15 vote-item">
-                <svg>
-                    <use xlink:href="#rate" width="120"></use>
-                </svg>
-                <span>1</span>
-            </div>
-            <div class="col-sm-15 vote-item">
-                <svg>
-                    <use xlink:href="#rate" width="120"></use>
-                </svg>
-                <span>2</span>
-            </div>
-            <div class="col-sm-15 vote-item">
-                <svg>
-                    <use xlink:href="#rate" width="120"></use>
-                </svg>
-                <span>3</span>
-            </div>
-            <div class="col-sm-15 vote-item">
-                <svg>
-                    <use xlink:href="#rate" width="120"></use>
-                </svg>
-                <span>4</span>
-            </div>
-            <div class="col-sm-15 vote-item">
-                <svg>
-                    <use xlink:href="#rate" width="120"></use>
-                </svg>
-                <span>5</span>
-            </div>
-        </div>
-    </div>
-
-    <!---------------------------page03--------------------------->
-
-    <div id="page03" class="main-section display-none">
-        <div class="text-section">
-            <h2 class="text-gray">La sécurité</h2>
-        </div>
-        <div class="horizontal-line"></div>
-        <div class="text-section">
-            <p class="text-secondary text-colored">Indiquez le degré d’importance de cet énoncé pour votre entreprise:</p>
-        </div>
-        <div class="text-section">
-            <p class="text-question text-white">
-                <span class="text-colored">Question 1.5</span> Les mises à jour de sécurité sont systématiquement appliquées sur tous nos serveurs au minimum une fois par mois
-            </p>
-        </div>
-        <div class="text-section">
-            <div class="col-xs-4">
-                <button class="button-choose">VRAI</button>
-            </div>
-            <div class="col-xs-4">
-                <button class="button-choose">FAUX</button>
-            </div>
-            <div class="col-xs-4">
-                <button class="button-choose">NE SAIT PAS</button>
-            </div>
-        </div>
-    </div>
-
-    <!---------------------------page04--------------------------->
-
-    <div id="page04" class="main-section display-none">
-        <div class="text-section">
-            <h2 class="text-gray">Mobilité</h2>
-        </div>
-        <div class="horizontal-line"></div>
-        <div class="text-section">
-            <p class="text-secondary text-colored">Répondez par vrai, faux ou ne sait pas à l’énoncé suivant:</p>
-        </div>
-        <div class="text-section">
-            <p class="text-question text-white">
-                <span class="text-colored">Question 3.6</span> Nos employés peuvent accéder à distance à toutes les applications nécessaires pour effectuer leur travail
-            </p>
-        </div>
-        <div class="text-section">
-            <div class="col-xs-4">
-                <button class="button-choose">VRAI</button>
-            </div>
-            <div class="col-xs-4">
-                <button class="button-choose">FAUX</button>
-            </div>
-            <div class="col-xs-4">
-                <button class="button-choose">NE SAIT PAS</button>
-            </div>
-        </div>
-    </div>
-
-    <!---------------------------page05--------------------------->
-
-    <div id="page05" class="main-section display-none">
-        <div class="text-section">
-            <h2 class="text-gray">Gestion et administration</h2>
-        </div>
-        <div class="horizontal-line"></div>
-        <div class="text-section">
-            <p class="text-secondary text-colored">Répondez par vrai, faux ou ne sait pas à l’énoncé suivant:</p>
-        </div>
-        <div class="text-section">
-            <p class="text-question text-white">
-                <span class="text-colored">Question 6.10</span> L’entreprise possède une procédure documentée pour l’achat et la configuration d’un nouveau poste informatique
-            </p>
-        </div>
-        <div class="text-section">
-            <div class="col-xs-4">
-                <button class="button-choose">VRAI</button>
-            </div>
-            <div class="col-xs-4">
-                <button class="button-choose">FAUX</button>
-            </div>
-            <div class="col-xs-4">
-                <button class="button-choose">NE SAIT PAS</button>
-            </div>
-        </div>
-    </div>
-
-    <!---------------------------page06--------------------------->
-
-    <div id="page06" class="main-section display-none">
-        <div id="loading-center">
-            <div id="loading-center-absolute">
-                <div class="object" id="object_one"></div>
-                <div class="object" id="object_two"></div>
-                <div class="object" id="object_three"></div>
-                <div class="object" id="object_four"></div>
-            </div>
-        </div>
-        <div id="report-container">
-            <img src="assets/images/report.png" alt="report">
-        </div>
-        <div class="button-start-wrapper button-report-wrapper">
-            <div class="button-start-color-bg button-report-color-bg">
-                <div class="button-report text-center">
-                    <h3>RAPPORT COMPLET &nbsp;&nbsp;</h3>
-                    <span><img src="assets/images/printer.svg" alt="print" width="20"></span>
+            <div class="text-section vote-section">
+                <div class="col-sm-15 vote-item">
+                    <svg>
+                        <use xlink:href="#rate" width="120"></use>
+                    </svg>
+                    <span>1</span>
+                </div>
+                <div class="col-sm-15 vote-item">
+                    <svg>
+                        <use xlink:href="#rate" width="120"></use>
+                    </svg>
+                    <span>2</span>
+                </div>
+                <div class="col-sm-15 vote-item">
+                    <svg>
+                        <use xlink:href="#rate" width="120"></use>
+                    </svg>
+                    <span>3</span>
+                </div>
+                <div class="col-sm-15 vote-item">
+                    <svg>
+                        <use xlink:href="#rate" width="120"></use>
+                    </svg>
+                    <span>4</span>
+                </div>
+                <div class="col-sm-15 vote-item">
+                    <svg>
+                        <use xlink:href="#rate" width="120"></use>
+                    </svg>
+                    <span>5</span>
                 </div>
             </div>
         </div>
-    </div>
 
+        <!---------------------------page02--------------------------->
+
+        <div id="page02" class="main-section  display-none">
+            <div class="text-section">
+                <h2 class="text-gray">La sécurité</h2>
+            </div>
+            <div class="horizontal-line"></div>
+            <div class="text-section">
+                <p class="text-secondary text-colored">Indiquez le degré d’importance de cet énoncé pour votre entreprise:</p>
+            </div>
+            <div class="text-section">
+                <p class="text-question text-white"><span class="text-colored">Question 1.2</span> Une fuite de données confidentielles aurait des conséquences graves pour l'entreprise 
+                (Ex: Informations financières, numéros de cartes de crédit)</p>
+            </div>
+            <div class="text-section vote-section">
+                <div class="col-sm-15 vote-item">
+                    <svg>
+                        <use xlink:href="#rate" width="120"></use>
+                    </svg>
+                    <span>1</span>
+                </div>
+                <div class="col-sm-15 vote-item">
+                    <svg>
+                        <use xlink:href="#rate" width="120"></use>
+                    </svg>
+                    <span>2</span>
+                </div>
+                <div class="col-sm-15 vote-item">
+                    <svg>
+                        <use xlink:href="#rate" width="120"></use>
+                    </svg>
+                    <span>3</span>
+                </div>
+                <div class="col-sm-15 vote-item">
+                    <svg>
+                        <use xlink:href="#rate" width="120"></use>
+                    </svg>
+                    <span>4</span>
+                </div>
+                <div class="col-sm-15 vote-item">
+                    <svg>
+                        <use xlink:href="#rate" width="120"></use>
+                    </svg>
+                    <span>5</span>
+                </div>
+            </div>
+        </div>
+
+        <!---------------------------page03--------------------------->
+
+        <div id="page03" class="main-section display-none">
+            <div class="text-section">
+                <h2 class="text-gray">La sécurité</h2>
+            </div>
+            <div class="horizontal-line"></div>
+            <div class="text-section">
+                <p class="text-secondary text-colored">Indiquez le degré d’importance de cet énoncé pour votre entreprise:</p>
+            </div>
+            <div class="text-section">
+                <p class="text-question text-white">
+                    <span class="text-colored">Question 1.5</span> Les mises à jour de sécurité sont systématiquement appliquées sur tous nos serveurs au minimum une fois par mois
+                </p>
+            </div>
+            <div class="text-section">
+                <div class="col-xs-4">
+                    <button class="button-choose">VRAI</button>
+                </div>
+                <div class="col-xs-4">
+                    <button class="button-choose">FAUX</button>
+                </div>
+                <div class="col-xs-4">
+                    <button class="button-choose">NE SAIT PAS</button>
+                </div>
+            </div>
+        </div>
+
+        <!---------------------------page04--------------------------->
+
+        <div id="page04" class="main-section display-none">
+            <div class="text-section">
+                <h2 class="text-gray">Mobilité</h2>
+            </div>
+            <div class="horizontal-line"></div>
+            <div class="text-section">
+                <p class="text-secondary text-colored">Répondez par vrai, faux ou ne sait pas à l’énoncé suivant:</p>
+            </div>
+            <div class="text-section">
+                <p class="text-question text-white">
+                    <span class="text-colored">Question 3.6</span> Nos employés peuvent accéder à distance à toutes les applications nécessaires pour effectuer leur travail
+                </p>
+            </div>
+            <div class="text-section">
+                <div class="col-xs-4">
+                    <button class="button-choose">VRAI</button>
+                </div>
+                <div class="col-xs-4">
+                    <button class="button-choose">FAUX</button>
+                </div>
+                <div class="col-xs-4">
+                    <button class="button-choose">NE SAIT PAS</button>
+                </div>
+            </div>
+        </div>
+
+        <!---------------------------page05--------------------------->
+
+        <div id="page05" class="main-section display-none">
+            <div class="text-section">
+                <h2 class="text-gray">Gestion et administration</h2>
+            </div>
+            <div class="horizontal-line"></div>
+            <div class="text-section">
+                <p class="text-secondary text-colored">Répondez par vrai, faux ou ne sait pas à l’énoncé suivant:</p>
+            </div>
+            <div class="text-section">
+                <p class="text-question text-white">
+                    <span class="text-colored">Question 6.10</span> L’entreprise possède une procédure documentée pour l’achat et la configuration d’un nouveau poste informatique
+                </p>
+            </div>
+            <div class="text-section">
+                <div class="col-xs-4">
+                    <button class="button-choose">VRAI</button>
+                </div>
+                <div class="col-xs-4">
+                    <button class="button-choose">FAUX</button>
+                </div>
+                <div class="col-xs-4">
+                    <button class="button-choose">NE SAIT PAS</button>
+                </div>
+            </div>
+        </div>
+
+        <!---------------------------page06--------------------------->
+
+        <div id="page06" class="main-section display-none">
+            <div id="loading-center">
+                <div id="loading-center-absolute">
+                    <div class="object" id="object_one"></div>
+                    <div class="object" id="object_two"></div>
+                    <div class="object" id="object_three"></div>
+                    <div class="object" id="object_four"></div>
+                </div>
+            </div>
+            <div id="report-container">
+                <img src="assets/images/report.png" alt="report">
+            </div>
+            <div class="button-start-wrapper button-report-wrapper">
+                <div class="button-start-color-bg button-report-color-bg">
+                    <div class="button-report text-center">
+                        <h3>RAPPORT COMPLET &nbsp;&nbsp;</h3>
+                        <span><img src="assets/images/printer.svg" alt="print" width="20"></span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    <!--</div>-->
 
     <div class="progress-meter">
         <div class="progress-meter-top-section">
