--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         </div>
     </div>
 
-    <!--<div class="main-section-wrapper">-->
+    <div class="main-section-wrapper">
 
         <!---------------------------page00--------------------------->
 
@@ -305,7 +305,7 @@
                 </div>
             </div>
         </div>
-    <!--</div>-->
+    </div>
 
     <div class="progress-meter">
         <div class="progress-meter-top-section">
