--- a/index.html
+++ b/index.html
@@ -61,13 +61,13 @@
         <div class="progress-question"><p>Question 1/5</p></div>
         <div class="progress-nav">
             <div class="progress-nav-previous">
-                <img src="assets/images/back.svg" width="22" alt="previous"><p>Précédent</p>
+                <a href="#"><img src="assets/images/back.svg" width="22" alt="previous"><p>Précédent</p></a>
             </div>
             <div class="progress-bar-background">
                 <div class="progress-bar-main"></div>
             </div>
             <div class="progress-nav-next">
-                <p>Suivant</p><img src="assets/images/next-arrow.svg" width="22" alt="next">
+                <a href="#" id='link-next' page-number="1"><p>Suivant</p><img src="assets/images/next-arrow.svg" width="22" alt="next"></a>
             </div>
         </div>
     </div>
@@ -148,11 +148,15 @@
                     <span>5</span>
                 </div>
             </div>
+            <div class="error-section text-center" id="error-section-1">
+                <div class="horizontal-line"></div>
+                <p>Répondez à cette question avant de continuer!</p>
+            </div>
         </div>
 
         <!---------------------------page02--------------------------->
 
-        <div id="page02" class="main-section  display-none">
+        <div id="page02" class="main-section display-none">
             <div class="text-section">
                 <h2 class="text-gray">La sécurité</h2>
             </div>
@@ -196,6 +200,10 @@
                     <span>5</span>
                 </div>
             </div>
+            <div class="error-section text-center" id="error-section-2">
+                <div class="horizontal-line"></div>
+                <p>Répondez à cette question avant de continuer!</p>
+            </div>
         </div>
 
         <!---------------------------page03--------------------------->
@@ -223,6 +231,10 @@
                 <div class="col-xs-4">
                     <button class="button-choose">NE SAIT PAS</button>
                 </div>
+            </div>
+            <div class="error-section text-center" id="error-section-3">
+                <div class="horizontal-line"></div>
+                <p>Répondez à cette question avant de continuer!</p>
             </div>
         </div>
 
@@ -252,6 +264,10 @@
                     <button class="button-choose">NE SAIT PAS</button>
                 </div>
             </div>
+            <div class="error-section text-center" id="error-section-4">
+                <div class="horizontal-line"></div>
+                <p>Répondez à cette question avant de continuer!</p>
+            </div>
         </div>
 
         <!---------------------------page05--------------------------->
@@ -279,6 +295,10 @@
                 <div class="col-xs-4">
                     <button class="button-choose">NE SAIT PAS</button>
                 </div>
+            </div>
+            <div class="error-section text-center" id="error-section-5">
+                <div class="horizontal-line"></div>
+                <p>Répondez à cette question avant de continuer!</p>
             </div>
         </div>
 
