--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--<meta name="viewport" content="width=device-width, initial-scale=1.0">-->
     <title>Exosource-Questionnaire</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link type="text/css" href="assets/stylesheets/reset.css" rel="stylesheet">
     <link type="text/css" href="assets/stylesheets/col-15.css" rel="stylesheet">
     <link type="text/css" href="assets/stylesheets/fonts.css" rel="stylesheet">
     <link type="text/css" href="assets/stylesheets/main.css" rel="stylesheet">
-    <!--<link type="text/css" href="assets/stylesheets/media.css" rel="stylesheet">-->
+    <link type="text/css" href="assets/stylesheets/media.css" rel="stylesheet">
     <!--<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js" defer></script>-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js" defer></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous" defer></script>
@@ -90,7 +90,7 @@
             <div class="text-section">
                 <div class="button-start-wrapper">
                     <div class="button-start-color-bg">
-                        <div class="button-start">
+                        <div class="button-start" data-toggle="modal" data-target="#myModal">
                             <h3>COMMENCER</h3>
                         </div>
                     </div>
@@ -434,7 +434,7 @@
                 </div>-->
                 <div class="modal-body">
                     <div class="img-container">
-                        <img src="assets/images/image-popup.jpg" alt="report pdf">
+                        <img src="assets/images/image-popup.jpg" alt="report pdf" class="img-report">
                     </div>
                     <div class="form-container">
                         <form role="form">
@@ -470,7 +470,7 @@
                                 </div>
                             </div>
                             <div>
-                                <label for="activity">Votre secteur d'activite</label>
+                                <label for="activity" class="full-width"><span class="required">!</span>Votre secteur d'activite<span class="required-info">Champ obligatoire</span></label>
                             </div>
                             <div class="input-group">
                                 <input type="text" class="form-control" aria-label="..." placeholder="Selectionnez une reponse..." id="activity">
