adjust bootstrap classes and font sizes

--- a/index.html
+++ b/index.html
@@ -10,10 +10,8 @@
     <link type="text/css" href="assets/stylesheets/fonts.css" rel="stylesheet">
     <link type="text/css" href="assets/stylesheets/main.css" rel="stylesheet">
     <link type="text/css" href="assets/stylesheets/media.css" rel="stylesheet">
-    <!--<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js" defer></script>-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js" defer></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous" defer></script>
-    <!--<script type="text/template" id="page01" src="assets/templates/page01.html"></script>-->
     <script src="assets/javascripts/main.js" defer></script>
 </head>
 <body>
@@ -90,7 +88,7 @@
             <div class="text-section">
                 <div class="button-start-wrapper">
                     <div class="button-start-color-bg">
-                        <div class="button-start" data-toggle="modal" data-target="#myModal">
+                        <div class="button-start">
                             <h3>COMMENCER</h3>
                         </div>
                     </div>
@@ -222,13 +220,13 @@
                 </p>
             </div>
             <div class="text-section">
-                <div class="col-xs-4">
+                <div class="col-sm-4">
                     <button class="button-choose">VRAI</button>
                 </div>
-                <div class="col-xs-4">
+                <div class="col-sm-4">
                     <button class="button-choose">FAUX</button>
                 </div>
-                <div class="col-xs-4">
+                <div class="col-sm-4">
                     <button class="button-choose">NE SAIT PAS</button>
                 </div>
             </div>
@@ -254,13 +252,13 @@
                 </p>
             </div>
             <div class="text-section">
-                <div class="col-xs-4">
+                <div class="col-sm-4">
                     <button class="button-choose">VRAI</button>
                 </div>
-                <div class="col-xs-4">
+                <div class="col-sm-4">
                     <button class="button-choose">FAUX</button>
                 </div>
-                <div class="col-xs-4">
+                <div class="col-sm-4">
                     <button class="button-choose">NE SAIT PAS</button>
                 </div>
             </div>
@@ -286,13 +284,13 @@
                 </p>
             </div>
             <div class="text-section">
-                <div class="col-xs-4">
+                <div class="col-sm-4">
                     <button class="button-choose">VRAI</button>
                 </div>
-                <div class="col-xs-4">
+                <div class="col-sm-4">
                     <button class="button-choose">FAUX</button>
                 </div>
-                <div class="col-xs-4">
+                <div class="col-sm-4">
                     <button class="button-choose">NE SAIT PAS</button>
                 </div>
             </div>
